syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.sample.superheroes.location.grpc";
option java_outer_classname = "LocationServiceProto";

package io.quarkus.sample.superheroes.location.v1;

enum LocationType {
  PLANET = 0;
  CITY = 1;
  PLACE = 2;
  ISLAND = 3;
  COUNTRY = 4;
  MOON = 5;
}

message Location {
  string name = 1;
  string description = 2;
  string picture = 3;
  LocationType type = 4;
}

message RandomLocationRequest {}
message AllLocationsRequest {}

message LocationsList {
  repeated Location locations = 1;
}

message DeleteAllLocationsRequest {}
message DeleteAllLocationsResponse {}

message ReplaceAllLocationsResponse {}

message GetLocationRequest {
  string name = 1;
}

message HelloRequest {}

message HelloReply {
  string message = 1;
}

service Locations {
  rpc GetRandomLocation(RandomLocationRequest) returns (Location) {}
  rpc GetAllLocations(AllLocationsRequest) returns (LocationsList) {}
  rpc DeleteAllLocations(DeleteAllLocationsRequest) returns (DeleteAllLocationsResponse) {}
  rpc GetLocationByName(GetLocationRequest) returns (Location) {}
  rpc ReplaceAllLocations(LocationsList) returns (ReplaceAllLocationsResponse) {}
  rpc Hello(HelloRequest) returns (HelloReply) {}
}
